--- a/src/components/Task/Task.scss
+++ b/src/components/Task/Task.scss
@@ -1,5 +1,5 @@
 $taskCheckboxLeftMargin: 30px;
-// $task__text-field {
+// $task__field-proper {
 %taskTextElement {
   background-color: inherit;
   border: none;
@@ -20,7 +20,6 @@ $taskCheckboxLeftMargin: 30px;
   margin-bottom: 15px;
   display: flex;
   align-items: center;
-  box-sizing: border-box;
   padding: 17px $taskCheckboxLeftMargin 17px 0;
   border-radius: 30px;
   background: white;
@@ -122,11 +121,24 @@ $animatedObjectWidth: 43px;
   }
 }
 
-.task__text-field-wrapper {
+.task__field {
+  display: flex;
   flex-grow: 1;
 }
 
-.task__text-field {
+.task__field-width-assembly {
+  position: relative;
+  display: flex;
+  align-items: center;
+  font-size: 30px;
+  line-height: 1.2;
+}
+
+.task__field-width-machine {
+  color: transparent;
+}
+
+.task__field-proper {
   @extend %taskTextElement;
   color: #000000;
 
@@ -134,9 +146,11 @@ $animatedObjectWidth: 43px;
     color: #9f9e9f;
   }
 
-  // &_type_task-name {
-  //   flex-grow: 1;
-  // }
+  &_type_task {
+    position: absolute;
+    width: 100%;
+    left: 0;
+  }
 
   &_type_list-name {
     margin: 0 20px;
@@ -165,7 +179,6 @@ $taskBarBreadcrumbSize: 68px;
 }
 
 .task__dropdown {
-  box-sizing: border-box;
   @extend %taskBarBreadcrumb;
   display: flex;
   flex-direction: row;
@@ -174,7 +187,6 @@ $taskBarBreadcrumbSize: 68px;
 }
 
 .task__list-color {
-  box-sizing: border-box;
   width: 21px;
   height: 21px;
   border-radius: 10px;
